# nim-compliance-agents

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: review_content.py  sample_content.txt
nim_compliance_agents/: __init__.py  cli.py  config.py  graph.py  state.py
nim_compliance_agents/agents/: __init__.py  evidence.py  policy.py  report.py  risk.py
nim_compliance_agents/frameworks/: __init__.py  dsa.yaml  loader.py  osa.yaml
nim_compliance_agents/output/: formatter.py
nim_compliance_agents/providers/: __init__.py  base.py  mock.py  nim.py
tests/: conftest.py  test_agents.py  test_formatter.py  test_framework.py  test_graph.py  test_providers.py  test_state.py
